--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -2,6 +2,7 @@ $themes: ("light", "dark");
 $colors: (
     #{null}: (
             cyan: #407bff,
+            cyan30: #407bff30,
             grey: #dedede,
             white: #ffffff,
             primary: (
