--- a/src/scss/pages/_contactUs.scss
+++ b/src/scss/pages/_contactUs.scss
@@ -14,6 +14,7 @@
         }
         span {
             @include size(40px);
+            min-width: 40px;
             @include flex(center);
             font-size: $fs-contact;
             color: var(--clr--white);
