--- a/src/scss/variables/_constants.scss
+++ b/src/scss/variables/_constants.scss
@@ -1,4 +1,6 @@
-$radius: 14px;
+// $radius: 14px;
+$radius: 0.7rem;
+// $radius: 0rem;
 $input-h: 50px;
 $qst-h: 45px;
 $p-faqs-m: 22px;
@@ -13,3 +15,6 @@ $sm: 576px;
 $md: 768px;
 $lg: 992px;
 $xl: 1200px;
+
+$w-leftBox: 51.6%;
+$p-settings: 30px;
