--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -7,6 +7,7 @@
 
 //components
 @import "./components/topnav";
+@import "./components/closeBtn";
 @import "./components/contactForm";
 @import "./components/settings";
 
