edit clipboad: js scss(+.copied)
remove selection, add feedback message

--- a/src/scss/pages/_header.scss
+++ b/src/scss/pages/_header.scss
@@ -83,6 +83,11 @@ header {
             outline: none;
             border: none;
         }
+        &.copied {
+            color: var(--clr--white) !important;
+            background-color: var(--clr-crd-green) !important;
+            font-weight: $fw-bold;
+        }
     }
     label {
         @include flex(center);
