--- a/src/scss/pages/_aboutUs.scss
+++ b/src/scss/pages/_aboutUs.scss
@@ -47,7 +47,7 @@
         position: relative;
         text-align: center;
         .desc {
-            width: 71.8%;
+            width: 90%;
             margin-inline: auto;
         }
         h3 {
@@ -60,9 +60,7 @@
             @include flex(space-between, null);
             margin: auto;
             margin-top: 10px;
-            width: 63.3%;
             max-width: 249px;
-
             overflow: hidden;
             li {
                 @include flex(center);
@@ -144,6 +142,9 @@
                 display: none;
             }
         }
+        .desc {
+            width: 71.8% !important;
+        }
         .content {
             align-items: center;
             &,
@@ -156,6 +157,7 @@
             }
             ul {
                 position: absolute;
+                width: 63.3%;
                 bottom: 0;
             }
         }
