--- a/src/scss/components/_topnav.scss
+++ b/src/scss/components/_topnav.scss
@@ -80,9 +80,10 @@
         padding: 11.5px 0;
         transform: translateX(50%);
         z-index: -1;
+        border-bottom: 15px solid var(--clr--primary);
+        border-radius: 0 0 $radius $radius;
         box-shadow: 0px 4px 10px -5px #0000009e;
         ul {
-            // width: 66.66%;
             display: block;
         }
         li {
@@ -114,6 +115,7 @@
             padding: 0;
             transform: unset;
             background: unset;
+            border-bottom: unset;
             li {
                 margin: unset;
                 width: 72px;
