big edit in Faqs js
make the all question onclick not only the chevron

--- a/src/scss/pages/_faqs.scss
+++ b/src/scss/pages/_faqs.scss
@@ -19,6 +19,7 @@
     li {
         background: var(--clr--grey);
         border-radius: $radius;
+        box-shadow: 0px 4px 10px -8px #0000009e;
         &:not(:last-child) {
             margin-bottom: 20px;
         }
@@ -30,6 +31,7 @@
     min-height: $qst-h;
     background: var(--clr--white);
     border-radius: $radius;
+    cursor: pointer;
     p {
         font-weight: $fw-bold;
         margin-left: $qst-h;
