--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -31,7 +31,7 @@ $colors: (
     ),
     crd: (
         black: #263238,
-        cyan: var(--clr--cyan),
+        cyan: #4e78cc,
         green: #33bd41,
         red: #c53f3f,
         purple: #7e57c2,
