--- a/src/scss/pages/_footer.scss
+++ b/src/scss/pages/_footer.scss
@@ -32,12 +32,17 @@
     }
     h3 {
         color: var(--clr--title);
+        margin-bottom: 10px;
+    }
+    li:not(:last-child) {
+        margin-bottom: 7px;
     }
     li,
     a {
         color: var(--clr-f-2);
         text-align: center;
         font-weight: $fw-light;
+        line-height: 16px;
     }
     a {
         &:hover {
