make only one theme, add rel="noopener" to links

--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -54,16 +54,17 @@ $colors: (
             @if (length($hex) == 1) {
                 --clr-#{$group}-#{"" + $color}: #{$hex};
             }
+            @if (length($hex) == 2) {
+                --clr-#{$group}-#{"" + $color}: #{nth($hex, 1)};
+            }
         }
     }
 }
-@each $theme in $themes {
-    body.#{$theme} {
-        @each $group, $content in $colors {
-            @each $color, $hex in $content {
-                @if (length($hex) == 2) {
-                    --clr-#{$group}-#{"" + $color}: #{nth($hex, index($themes, $theme))};
-                }
+body.#{nth($themes,2)} {
+    @each $group, $content in $colors {
+        @each $color, $hex in $content {
+            @if (length($hex) == 2) {
+                --clr-#{$group}-#{"" + $color}: #{nth($hex, 2)};
             }
         }
     }
