add shortcut popup

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,7 @@
 @import "./components/closeBtn";
 @import "./components/contactForm";
 @import "./components/settings";
+@import "./components/shortcuts";
 
 //pages
 @import "./pages/header";
