--- a/src/scss/base/_init.scss
+++ b/src/scss/base/_init.scss
@@ -2,8 +2,9 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: "Roboto", Helvetica, sans-serif;
+    -webkit-tap-highlight-color: transparent;
 }
 body {
+    font-family: "Roboto", Helvetica, sans-serif;
     background: var(--clr--bg);
 }
