--- a/src/scss/components/_topnav.scss
+++ b/src/scss/components/_topnav.scss
@@ -4,10 +4,14 @@
     z-index: 7;
     padding: $pt-topnav 0;
     position: relative;
+    margin: $sticky-m 0;
     &.sticky {
         position: fixed;
         box-shadow: 0px 4px 10px -5px #0000009e;
         background: var(--clr--primary);
+        width: calc(100% - #{$sticky-m * 2});
+        border-radius: 0.775rem;
+        margin: $sticky-m;
         .logo {
             .img {
                 background: var(--clr--white);
@@ -156,6 +160,22 @@
         }
         .menu {
             transform: rotate(90deg);
+        }
+    }
+}
+// when the user click the theme toggle btn
+// the icon will change
+body {
+    .theme-button i.sun {
+        display: none;
+    }
+    //theme class name
+    &.dark {
+        .theme-button i.sun {
+            display: block;
+        }
+        .theme-button i.moon {
+            display: none;
         }
     }
 }
