+ loading, lazy images, bg-clr in black theme

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -6,6 +6,7 @@
 @import "./base/typography";
 
 //components
+@import "./components/loading";
 @import "./components/topnav";
 @import "./components/closeBtn";
 @import "./components/contactForm";
