--- a/src/scss/variables/_colors.scss
+++ b/src/scss/variables/_colors.scss
@@ -17,7 +17,8 @@ $colors: (
             ),
             bg: (
                 #f2f2f2,
-                #212121,
+                // #212121,
+                #171f29,
             ),
             title: (
                 var(--clr--cyan),
