--- a/src/scss/helpers/_animation.scss
+++ b/src/scss/helpers/_animation.scss
@@ -38,9 +38,54 @@
         top: 30%;
     }
 }
+/* loading animation by Mr tashfene https://codepen.io/tashfene */
+@keyframes loader {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    25% {
+        transform: rotate(180deg);
+    }
+
+    50% {
+        transform: rotate(180deg);
+    }
+
+    75% {
+        transform: rotate(360deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes loader-inner {
+    0% {
+        height: 0%;
+    }
+
+    25% {
+        height: 0%;
+    }
+
+    50% {
+        height: 100%;
+    }
+
+    75% {
+        height: 100%;
+    }
+
+    100% {
+        height: 0%;
+    }
+}
+
 .fade-in {
     opacity: 0;
-    transition: opacity 700ms ease-in;
+    transition: opacity $trans ease-in;
     &.appear {
         opacity: 1;
     }
@@ -53,7 +98,7 @@
 }
 .slide-in {
     opacity: 0;
-    transition: transform 700ms ease-in, opacity 700ms ease-in;
+    transition: transform $trans ease-in, opacity $trans ease-in;
     &.appear {
         transform: translateX(0);
         opacity: 1;
